Changes for Week 3
Add Child Selector

--- a/form_style.css
+++ b/form_style.css
@@ -15,7 +15,9 @@ h2 {
 p,legend {
 	color: white; /* paragraph and legend colour to white*/
 }
-
+div > p { 
+	color: red; /* descendent/child selector 1*/
+}
 @media screen and (max-width: 480px) {
 *,
 *:before,
